# drf-auth

./: README.md  pyproject.toml
auth/: db.sqlite3
auth/auth/: settings.py  urls.py
auth/party/: admin.py  models.py  views.py
auth/party/migrations/: 0001_initial.py
